added styles, avatar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Guestbook
-spring.datasource.url=jdbc:postgresql://localhost:5432/guestbook-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/guestbook_db
 spring.datasource.username=postgres
 spring.datasource.password=root
 
